--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,168 @@ html {
 }
 
 body {
-  margin: 0;
+  padding: 0rem;
+  margin: 0rem;
   min-height: 100%;
+  background-color: #fafbfc;
+}
+
+header {
+  background-color: rgba(255, 255, 255, 0.75);
+  border-bottom-style: solid;
+  border-color: #e1e4e8;
+  border-width: 1px;
+  margin: 0px 0px 40px 0px;
+  padding: 0px;
+}
+
+li a:link,
+li a:visited {
+  text-decoration: none;
+  color: #24292e;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  line-height: 1.5;
+  font-size: 14px;
+}
+
+.nav-left-side {
+  list-style: none;
+  display: flex;
+  padding: 0px;
+}
+
+/* .nav-left-side li a:link,
+.nav-left-side li a:visited {
+  text-decoration: none;
+  color: #24292e;
+  font-size: 14px;
+} */
+
+.nav-left-side li a:hover {
+  color: #24292e;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+}
+
+.nav-title-group {
+  display: flex;
+  padding: 0px 0px 0px 20px;
+}
+
+.nav-icon {
+  padding: 0px 0px;
+  list-style: none;
+  display: flex;
+}
+
+.nav-icon::before {
+  /* background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg'); */
+  background-repeat: no-repeat;
+  /* content: '🔗'; */
+}
+
+.nav-title {
+  display: flex;
+  font-size: 16px;
+  font-weight: 600;
+  color: #24292e;
+  padding: 0px 20px 0px 20px;
+}
+
+.nav-item a {
+  padding: 0px 10px;
+}
+
+.nav-right-side {
+  list-style: none;
+  display: flex;
+}
+
+.nav-right-side li a:link,
+.nav-right-side li a:visited {
+  text-decoration: none;
+  color: #24292e;
+  font-size: 14px;
+}
+
+.nav-right-side li a:hover {
+  color: #24292e;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+}
+
+.wrapper {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: space-around;
+  box-sizing: border-box;
+  /* padding: 0rem 1.4rem; */
+  padding: 0px 24px;
+}
+
+.wrapper div {
+  box-sizing: border-box;
+  width: auto;
+  max-width: 1600px;
+  border-radius: 9px;
+  padding: 8px;
+  margin-right: 30px;
+  margin-bottom: 40px;
+}
+
+.wrapper div > a {
+  border: 1px solid #e1e4e8;
+}
+
+/* .Parentocats {
+  height: auto;
+  max-width: 100%;
+} */
+
+.entry > ul {
+  list-style: none;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  /* border: 1px solid #e1e4e8; */
+}
+
+@media all and (min-width: 1280px) {
+  .wrapper div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 25%;
+  }
+}
+
+@media all and (max-width: 1279px) and (min-width: 1012px) {
+  .wrapper div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 33.33%;
+  }
+}
+
+@media all and (max-width: 1011px) and (min-width: 0px) {
+  .wrapper div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+  }
+}
+
+footer {
+  display: flex;
+  /* justify-content: row; */
+  align-items: flex-end;
 }
