--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,8 @@ body {
 
 header {
   background-color: rgba(255, 255, 255, 0.75);
+  position: sticky;
+  top: 0;
   border-bottom-style: solid;
   border-color: #e1e4e8;
   border-width: 1px;
