--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,8 @@ html {
 }
 
 body {
-  padding: 0rem;
-  margin: 0rem;
+  margin: 0;
+  box-sizing: border-box;
   min-height: 100%;
   background-color: #fafbfc;
 }
@@ -17,22 +17,24 @@ header {
   background-color: rgba(255, 255, 255, 0.75);
   position: sticky;
   top: 0;
-  border-bottom-style: solid;
-  border-color: #e1e4e8;
-  border-width: 1px;
+  border-bottom: 1px solid #e1e4e8;
   margin: 0px 0px 40px 0px;
-  padding: 0px;
+  display: block;
+  box-sizing: border-box;
 }
 
-li a:link,
-li a:visited {
-  text-decoration: none;
-  color: #24292e;
+section {
+  width: auto;
+  max-width: 1600px;
+  /* padding: 0px 4px; */
+  /* padding: 0px 24px; */
+  box-sizing: border-box;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   line-height: 1.5;
   font-size: 14px;
 }
@@ -40,15 +42,17 @@ li a:visited {
 .nav-left-side {
   list-style: none;
   display: flex;
+  justify-content: left;
+  align-items: center;
   padding: 0px;
 }
 
-/* .nav-left-side li a:link,
+.nav-left-side li a:link,
 .nav-left-side li a:visited {
   text-decoration: none;
   color: #24292e;
   font-size: 14px;
-} */
+}
 
 .nav-left-side li a:hover {
   color: #24292e;
@@ -67,11 +71,11 @@ li a:visited {
   display: flex;
 }
 
-.nav-icon::before {
-  /* background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg'); */
+/* .nav-icon::before {
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg');
   background-repeat: no-repeat;
-  /* content: '🔗'; */
-}
+  content: '🔗';
+} */
 
 .nav-title {
   display: flex;
@@ -103,33 +107,48 @@ li a:visited {
   text-decoration-thickness: 1px;
 }
 
-.wrapper {
+main {
+  display: block;
+  box-sizing: border-box;
+}
+
+article {
+  width: auto;
+  max-width: 1600px;
   display: flex;
   flex-flow: row wrap;
   align-content: space-around;
+  padding: 0px 11px;
   box-sizing: border-box;
-  /* padding: 0rem 1.4rem; */
-  padding: 0px 24px;
 }
 
-.wrapper div {
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+
+/* .wrapper div {
   box-sizing: border-box;
   width: auto;
-  max-width: 1600px;
-  border-radius: 9px;
-  padding: 8px;
-  margin-right: 30px;
   margin-bottom: 40px;
-}
+} */
 
 .wrapper div > a {
+  display: block;
+  padding: 8px;
+  margin-bottom: 8px;
+  background-color: #fff;
   border: 1px solid #e1e4e8;
+  border-radius: 9px;
+  color: #0366d6;
+  text-decoration: none;
 }
 
-/* .Parentocats {
-  height: auto;
-  max-width: 100%;
-} */
+.entry {
+  box-sizing: border-box;
+  width: auto;
+}
 
 .entry > ul {
   list-style: none;
@@ -139,10 +158,16 @@ li a:visited {
   padding: 0px;
 }
 
+.wrapper li a:link,
+.wrapper li a:visited {
+  text-decoration: none;
+  color: #24292e;
+}
+
 img {
   height: auto;
   max-width: 100%;
-  /* border: 1px solid #e1e4e8; */
+  border-radius: 4px;
 }
 
 @media all and (min-width: 1280px) {
@@ -157,15 +182,25 @@ img {
   .wrapper div {
     display: flex;
     flex-wrap: wrap;
-    width: 33.33%;
+    width: 30%;
   }
 }
 
-@media all and (max-width: 1011px) and (min-width: 0px) {
+@media all and (min-width: 768px) {
+  .wrapper div {
+    padding: 0px 16px;
+  }
+}
+
+@media all and (max-width: 1011px) and (min-width: 545px) {
   .wrapper div {
     display: flex;
     flex-wrap: wrap;
     width: 50%;
+    padding: 0px 16px;
+    /* margin-left: -8px;
+    margin-right: -8px; */
+    margin-bottom: 40px;
   }
 }
 
